# drift

./: .gitignore  biome.json  diagnose.mjs  generate_icon.py  package.json  pnpm-lock.yaml  turbo.json  vitest.config.ts
apps/extension/: background.ts  package.json  tsconfig.json
apps/extension/components/: InterventionPanel.tsx
apps/extension/contents/: scrollMonitor.tsx
apps/extension/lib/: distractionSites.ts  formatDuration.ts  scrollVelocity.test.ts  scrollVelocity.ts
apps/extension/popup/: index.tsx
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/public/audio/: README.md
apps/web/public/worklets/: brown-noise-processor.js
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: main.rs
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/hooks/: useAppState.ts  useCalendarBridge.ts  useCheatSheetShortcut.ts  useElasticTimer.ts  useGlobalShortcut.ts  useLiveSessionElapsed.ts  useMomentum.ts  useOnboarding.ts  usePrefersReducedMotion.ts  useRescoreOnReconnect.ts  useRoutineEngine.ts  useTaskDecay.ts  useTaskEngine.ts  useTodaysPriority.ts  useUser.ts  useVolumeShortcuts.ts
apps/web/src/stores/: anchorStore.ts  appStore.ts  audioStore.ts  brainDumpUIStore.ts  routineStore.ts  sessionStore.ts  settingsStore.ts  taskStore.ts  toastStore.ts  transitionStore.ts
supabase/migrations/: 001_init.sql  002_calendar.sql  003_events.sql  004_rename_shutdown_priority.sql  005_routines.sql  006_ambient_transition.sql  007_limbo_decay_setting.sql
(+117 files in other folders)
