# apps/web/src-tauri/Cargo.toml
[package]
name = "drift"
version = "0.1.0"
description = "DRIFT — Deep Focus OS for the ADHD Mind"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-prevent-default = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "drift"
path = "src/main.rs"